--- a/tags.html
+++ b/tags.html
@@ -2,6 +2,7 @@
 <html>
     <HEAD>
         <title>stine's site :3</title>
+        <link rel="stylesheet" href = "external.css">
     </HEAD>
     <body>
         <h1 style= "background-color: purple; color: tomato; font-family:helvetica; font-size:50%; text-align:center;" >christeeeeeen</h1>
@@ -10,14 +11,15 @@
         <p style= "background-color: blue; color: white; font-family:helvetica; text-align:center;">i am from washington state, and have been a lot of places but this is my main home hehe</p>
         <h2 style= "background-color: black; color: greenyellow; font-family:helvetica; font-size:500%; text-align:center;">favorite webbies!! (not the awards)</h2>
         <ol>
-            <li>
+            <li> 
                 <a href = "https://minecraft.net">crafts
-                    <img src = "mcqueen eyeless.png" title "scary"; style width="1250px" height="50px" margin=5px>
+                    
+                    <img src = "mcqueen eyeless.png" title "scary"; style width="500px" height="50px" margin=5px id="float">
                 </a>
             </li>
             <li>
                 <a href = "https://instagram.com/christinedkngo">meeeee
-                    <img src = "mcqueen drawing.png" title "kids"; style width="1250px" height="50px" margin=5px>
+                    <img src = "mcqueen drawing.png" title "kids"; style width="1250px" height="50px" margin=5px id="rounded">
                 </a>
             </li>
             <li>
