--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -10,16 +10,16 @@
         </div>
             <p><button class="button" onclick="playVideo()">Reveal Youtube Video</button></p>
         <div>
-            <h2>Video</h2>
-            <video id ="video" width="560" autoplay muted>
-                <source src="video1.mp4" type="video/mpeg">
+            <h2>mr pan</h2>
+            <video id ="video" width="560" controls autoplay muted>
+                <source src="video1.mp4" type="video/mp4">
             </video>
-            <h2>Audio</h2>
-            <audio controls autoplay muted>
+            <h2>loud skrt</h2>
+            <audio controls>
                 <source src="pokemon.mp3" type="audio/mpeg">
             </audio>
 
-            <h2>Object</h2>
+            <h2>blu skrt</h2>
             <object width="560" height = "315" data="https://www.youtube.com/embed/B5GcpNxD8IQ">
             
         
@@ -27,7 +27,7 @@
             </div>
 
             <div>
-           <h2>RSS Feed</h2>
+           <h2>RSS</h2>
            <script src="https://www.feedroll.com/rssviewer/feed2js.php?src=https%3A%2F%2Fwww.nasa.gov%2Frss%2Fdyn%2Flg_image_of_the_day.rss&chan=y&num=5&desc=1&utf=y"  charset="UTF-8" type="text/javascript"></script>
             <a href="https://www.feedroll.com/rssviewer/feed2js.php?src=https%3A%2F%2Fwww.nasa.gov%2Frss%2Fdyn%2Flg_image_of_the_day.rss&chan=y&num=5&desc=1&utf=y&html=y">View RSS feed</a>
             </div>
@@ -54,7 +54,6 @@
 
 </script>
 
-<script language="JavaScript" src="https://www.feedroll.com/rssviewer/feed2js.php?src=https%3A%2F%2Fwww.nasa.gov%2Frss%2Fdyn%2Flg_image_of_the_day.rss&chan=y&num=5&desc=1&utf=y"  charset="UTF-8" type="text/javascript"></script>
 
 
 
